@@ -3,11 +3,11 @@ package useless;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -20,8 +20,7 @@ public class BaiDuMapApiTest {
 
     public static void main(String[] args) {
         BaiDuMapApiTest test = new BaiDuMapApiTest();
-        String addre = "http://api.map.baidu.com/place/v2/search/shanghai";
-        System.out.println(test.getLatAndLngByAddress(addre));
+        System.out.println(test.getLatAndLngByAddress("https://api.map.baidu.com/place/v2/search/shanghai"));
     }
 
     /*
@@ -32,21 +31,15 @@ public class BaiDuMapApiTest {
      * 取消代理即可正常使用API。
      * 公司的笔记本，无论怎么设置，都会报异常信息：java.lang.StringIndexOutOfBoundsException: String index out of range: -6
      */
-    public Map<String, BigDecimal> getLatAndLngByAddress(String addr) {
-        String address = "";
+    public Map<String, BigDecimal> getLatAndLngByAddress(String add) {
         String lat = "";
         String lng = "";
-        try {
-            address = java.net.URLEncoder.encode(addr, "UTF-8");
-        } catch (UnsupportedEncodingException e1) {
-            e1.printStackTrace();
-        }
-        String url = String.format("http://api.map.baidu.com/geocoder/v2/?"
-                + "ak=4rcKAZKG9OIl0wDkICSLx8BA&output=json&address=%s", address);
+        String address = java.net.URLEncoder.encode(add, StandardCharsets.UTF_8);
         URL myURL = null;
         URLConnection httpsConn = null;
         //进行转码
         try {
+            String url = String.format("https://api.map.baidu.com/geocoder/v2/?ak=4rcKAZKG9OIl0wDkICSLx8BA&output=json&address=%s", address);
             myURL = new URL(url);
         } catch (MalformedURLException e) {
             e.printStackTrace();
@@ -56,15 +49,12 @@ public class BaiDuMapApiTest {
                 httpsConn = myURL.openConnection();
             }
             if (httpsConn != null) {
-                InputStreamReader insr = new InputStreamReader(
-                        httpsConn.getInputStream(), "UTF-8");
+                InputStreamReader insr = new InputStreamReader(httpsConn.getInputStream(), StandardCharsets.UTF_8);
                 BufferedReader br = new BufferedReader(insr);
                 String data;
                 if ((data = br.readLine()) != null) {
-                    lat = data.substring(data.indexOf("\"lat\":")
-                            + ("\"lat\":").length(), data.indexOf("},\"precise\""));
-                    lng = data.substring(data.indexOf("\"lng\":")
-                            + ("\"lng\":").length(), data.indexOf(",\"lat\""));
+                    lat = data.substring(data.indexOf("\"lat\":") + ("\"lat\":").length(), data.indexOf("},\"precise\""));
+                    lng = data.substring(data.indexOf("\"lng\":") + ("\"lng\":").length(), data.indexOf(",\"lat\""));
                 }
                 insr.close();
             }
