@@ -13,6 +13,7 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.OutputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * Apache POI SXSS相关API的简易封装
@@ -62,7 +63,7 @@ public class POIUtils {
         if (response != null) {
             // response对象不为空,响应到浏览器下载
             response.setContentType(Const.XLSX_CONTENT_TYPE);
-            response.setHeader("Content-disposition", "attachment; filename=" + URLEncoder.encode(String.format("%s%s", fileName, Const.XLSX_SUFFIX), "UTF-8"));
+            response.setHeader("Content-disposition", "attachment; filename=" + URLEncoder.encode(String.format("%s%s", fileName, Const.XLSX_SUFFIX), StandardCharsets.UTF_8));
             if (out == null) {
                 out = response.getOutputStream();
             }
